main.css
/* @charset "UTF-8";
/* @font-face {
  font-family: iAWriterMono;
  src: url("iAWriterMonoS-Regular.ttf");
} */

@import "reset.css";

:root {
  --primary: rgba(255, 255, 255, 1);
  --primary-underline-inactive: rgba(255, 255, 255, 0.1);
  --primary-underline-active: rgba(255, 255, 255, .5);
  --secondary: rgba(50, 50, 50, 1);

  --h3-size: 17px;

  --body-font-family: 'neue-haas-grotesk-text';
  --body-line-height: 150%;
  --body-size: 15px;
  --body-letter-spacing: 0.02em;
  --body-color: rgba(255,255,255,.9);

  --caption-size: 14px;
  --caption-letter-spacing: 0.02em;
  --bg: #111111;

  --mobile-size: 15px;
}

.hoverCard span {
  display: inline-block;
  padding-top: 3px;
}

html {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;

  font-family: var(--body-font-family),neue-haas-unica, aktiv-grotesk, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;

  background: var(--bg);
}

.landing {
  padding: 60px 30px 30px 40px;
  display: grid;
  grid-template-columns: 520px 1fr;
  column-gap: 40px;
}
.about {
  grid-column-start: 1;
  width: 495px;
  position: fixed;
}

::selection {
  color: none;
  background: none; 
}

/* For Mozilla Firefox */
::-moz-selection {
  color: none;
  background: none;
}

.indent {
  margin-right: 28px;
}

a,
p,
b {
  color: var(--body-color);
  line-height: var(--body-line-height);
  font-size: var(--body-size);
  font-style: normal;
  font-weight: 400;
  letter-spacing: var(--body-letter-spacing);
  z-index: 0;
  width: auto;
}

b{
  font-weight: 600;
}


a {
  text-decoration: none;
  border-bottom: 1px solid var(--primary-underline-inactive);
}

span{
  font-size: var(--caption-size);
  color: var(--body-color);
  line-height: var(--body-line-height);
  letter-spacing: var(--caption-letter-spacing);
  font-style: normal;
  font-weight: 400;
  z-index: 0;
  width: auto;
  margin-top: 5px;
  opacity: 0.5;
}

span b{
  font-size: var(--caption-size);
}

.about a:hover,
footer a:hover {
  border-bottom: 1px solid var(--primary-underline-active);
  color: rgba(255,255,255,1);
}

p {
  cursor: default;
}

.experience {
  margin-bottom: 24px;
}

.media {
  grid-column-start: 2;
  width: 100%;
  margin-top: 40px;
}

.hoverCard {
  width: 100%;
  max-width: 1000px;
  /* position: sticky; */
  /* top: 60px; */
  transform-origin: center top;
  border-bottom: none;
  display: inline-block;
  background: rgba(0, 0, 0, 0);
  animation: loadIn 0.8s 1s forwards;
  opacity: 0;
}

.hoverCard,
figure {
  transition: opacity 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275),
    transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}
figure {
  margin-bottom: 30px;
}

figure:last-child {
  margin-bottom: 70px;
}

.about,
footer {
  opacity: 0;
  animation: loadIn 0.8s 0.5s forwards;
}

.hoverCard:nth-child(1) {
  animation-delay: 0.5s;
}
.hoverCard:nth-child(2) {
  animation-delay: 0.55s;
}
.hoverCard:nth-child(3) {
  animation-delay: 0.6s;
}
.hoverCard:nth-child(4) {
  animation-delay: 0.65s;
}

.hoverCard:last-child {
  margin-bottom: 0px;
  animation-delay: 0.65s;
}

.hoverCard a {
  text-decoration: none;
}


figure:hover {
  transform: scale(1.005);
  opacity: 0.9;
}

.hoverCard video,
.hoverCard img {
  border: 1px solid var(--primary-underline-inactive);
  border-radius: 10px;
  display: block;
  width: 100%;
  height: auto;
  max-height: 90vh;
  object-fit: cover;
  /* transition: .1s; */
}

.hoverCard:hover > img, .hoverCard:hover > video{
  box-shadow: 0 0 100x rgba(255, 255, 255, 0.1);
  border: 1px solid rgba(255,255,255, .5);
}

.hoverCard:hover > span{
  opacity: .9;
}


footer {
  position: fixed;
  margin-top: 0px;
  bottom: 30px;
  width: 100%;
}

@keyframes loadIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@media (max-width: 950px) {
  .landing {
    grid-template-columns: 1fr;
  }
  .about {
    position: static;
    width: 100%;
    max-width: 540px;
  }
  .media {
    margin-top: 30px;
    grid-column-start: 1;
  }

  footer {
    position: static;
    margin-top: 50px;
    bottom: none;
    width: 100%;
  }
}

@media (max-width: 450px) {
  .landing {
    padding: 32px 14px 14px 14px;
    column-gap: 0;
  }

  a,
  p,
  span
  {
    line-height: 1.4em;
    font-size: 15px;
    letter-spacing: 0em;
  }
}

